@@ -6,6 +6,8 @@ v2.6.3.2 - Bug fixed anaglyph for different data windows and display windows.
 	 - Removed old GL drawing routines for gfx cards without textures
 	   which were no longer working properly.
 	 - Updated color and pixel info updates on seek.
+	 - Bug fixed loading of openexr images with data window not appearing
+	   in the right location the first time they were read.
 v2.6.3.1 - Fixed selection in all cases for display and data windows.
 	 - Added missing ICC_PROFILES environment variable to search for
 	   ICC/ICM color profiles.
